fixed login and signup and added eye button to toggle password visibility

--- a/src/components/Signup/signup.sass
+++ b/src/components/Signup/signup.sass
@@ -78,6 +78,7 @@
             flex-direction: column
             width: 350px
             margin-bottom: 1rem
+            position: relative
 
             &__label
                 color: orange
@@ -89,6 +90,18 @@
                 padding: .5rem
                 width: 100%
                 color: black
+
+            &__eye
+                background-color: rgba(0,0,0,.9)
+                position: absolute
+                bottom: 0
+                right: 0
+                height: calc(100% - 1.45rem)
+                display: flex
+                padding: .8rem
+
+                &:hover
+                    cursor: pointer
 
             &__error
                 font-weight: bold
@@ -108,9 +121,21 @@
 
             &:hover
                 background-color: #f8be00
+
+        &__success
+            color: white
+            font-size: 1.2rem
+            font-weight: bold
+            text-align: center
+            border: 1px solid white
+            padding: 1rem 0
+            margin-top: 1rem
+            max-width: 350px
     
     &__home
         display: none
+
+
 
 @media all and (max-width: 1200px)
 
